# rwat

./: Cargo.toml  LICENSE  README.md
examples/add/: add.wat  main.wat
src/: code.rs  emit.rs  lib.rs  link.rs  main.rs  parse.rs  reloc.rs  scan.rs  types.rs
tests/: print.rs
