[package]
name = "rwat"
version = "0.1.1"
edition = "2024"
description = "Parse annotated wat into relocatable wasm file."
repository = "https://github.com/Spxg/rwat"
readme = "README.md"
license = "MIT"
keywords = ["wasm", "wat", "relocation", "linking"]
categories = ["wasm"]

[[bin]]
name = "rwat"
path = "src/main.rs"

[dependencies]
wasm-encoder = { version = "0.248.0", default-features = false }
wasmparser = { version = "0.248.0", default-features = false }
wast = { version = "248.0.0", default-features = false, features = [
  "wasm-module"
] }

[dev-dependencies]
wasmprinter = { version = "0.248.0", default-features = false }
